[package]
name = "raytracing_weekend_rs"
version = "0.1.2"
authors = ["Jakob Fischer <jakob@automorph.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
rayon = "1.5.0"
maglio = { path = "../maglio" }
